tests/ui/fail/skip/duplicate_setters_2.stderr
error: encountered duplicate `#[skip(setters)]`
 --> tests/ui/fail/skip/duplicate_setters_2.rs:5:15
  |
5 |     #[skip] #[skip(setters)]
  |               ^^^^

error: duplicate `#[skip(setters)]` here
 --> tests/ui/fail/skip/duplicate_setters_2.rs:5:7
  |
5 |     #[skip] #[skip(setters)]
  |       ^^^^
